[tool.poetry]
name = "ris-vendor-stats"
version = "0.1.0"
description = ""
authors = ["konstin <konstin@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
pandas = "^1.4.0"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.1.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
